Tab sound indicator doesn't display after switch stream of twitch.tv
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox78 | --- | unaffected |
firefox79 | --- | verified |
firefox80 | --- | verified |
People
(Reporter: alice0775, Assigned: alwu)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Steps To Reproduce:
- Open https://www.twitch.tv/ (not need log-in).
- Click a stream in RECOMMENDED CHANNELS pane.
And unmute if any.
--- Tab sound indicator should appear as expected. - Click another stream in RECOMMENDED CHANNELS pane.
--- Tab sound indicator will disappear.
Actual Results:
Tab sound indicator will disappear though the sound is still there.
Expected Results:
Tab sound indicator should appear
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1b52ba682823b0f5ee962f467018cf08b38d05e0&tochange=3feca854d60fbd2462e0f2804202376286ce4a92
Reporter | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Whenever the audible state changes, we should always store the latest state but only notify the change after playing starts.
Assignee | ||
Comment 2•4 years ago
|
||
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8617d54c6f54 part1 : always store the audible state change. r=bryce https://hg.mozilla.org/integration/autoland/rev/2764df1f9193 part2 : add a test. r=bryce
Comment 4•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/8617d54c6f54
https://hg.mozilla.org/mozilla-central/rev/2764df1f9193
Assignee | ||
Comment 5•4 years ago
|
||
Comment on attachment 9163581 [details]
Bug 1652460 - part1 : always store the audible state change.
Beta/Release Uplift Approval Request
- User impact if declined: The sound indicator sometime would not work correctly on Twitch.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Follow comment0.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This minor change is about always updating internal audible state, which doesn't introduce any new check or big behavior change. In addition, we also have an automation test for that.
- String changes made/needed:
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Reporter | ||
Updated•4 years ago
|
Comment 6•4 years ago
|
||
Verified on Firefox 80.0a1 (2020-07-15) on Windows 10 x64, MacOS 10.14 and on Ubuntu 18.04.
Comment 7•4 years ago
|
||
Comment on attachment 9163581 [details]
Bug 1652460 - part1 : always store the audible state change.
Approved for 79.0b9. Thanks for including a test.
Updated•4 years ago
|
Comment 8•4 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/774e71dac50b
https://hg.mozilla.org/releases/mozilla-beta/rev/1b8ddfd11888
Comment 9•4 years ago
|
||
Verified on Firefox 79.0b9 on Windows 10 x64, MacOS 10.14 and on Ubuntu 20.04.
Assignee | ||
Updated•4 years ago
|
Description
•