Bug 1652460 - part1 : always store the audible state change. r=bryce

Whenever the audible state changes, we should always store the latest state but only notify the change after playing starts.

Differential Revision: https://phabricator.services.mozilla.com/D83549